--- a/css/style.css
+++ b/css/style.css
@@ -102,8 +102,9 @@ ul a {
   border-radius: 10px;
 }
 
-.card1:hover {
-  outline: 3px solid gray;
+.card1 i {
+  font-size: 40px;
+  color: var(--green1);
 }
 
 .card2 {
@@ -114,13 +115,14 @@ ul a {
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3);
 }
 
-.card2:hover {
-  outline: 3px solid gray;
-}
+/* SERVICES ENDS  */
 
-.card1 i {
-  font-size: 40px;
-  color: var(--green1);
+/* ________________________________________________________ */
+
+/* RATINGS  START  */
+
+.rating-bg {
+  background-color: rgb(0, 88, 83, 0.05);
 }
 
 .hero2 {
@@ -131,18 +133,14 @@ ul a {
   min-height: 500px;
 }
 
-.rating-bg {
-  background-color: rgb(0, 88, 83, 0.05);
-}
-
 .ratingCard {
   outline: none;
   border: none;
-  min-width: 250px;
-  min-height: 250px;
   border-radius: 10px;
   background: var(--white);
   text-align: center;
+  max-width: 250px;
+  min-height: 250px;
 }
 
 .ratingCard img {
@@ -156,3 +154,9 @@ ul a {
 .ratingPara {
   font-size: 20px;
 }
+
+/* RATINGS ENDS  */
+
+/* ________________________________________________________ */
+
+/*   START  */
