--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,24 @@ p {
   background: var(--green1);
 }
 
+.cardP {
+  max-width: 400px;
+}
+
+.imgP1 {
+  background-image: url(../images/island.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  height: 450px;
+  max-width: 400px;
+}
+
+.pkgDetails {
+  background: var(--white);
+  margin-top: -120px;
+}
+
 /*  Best Packages ENDS  */
 
 /* ________________________________________________________ */
