--- a/css/style.css
+++ b/css/style.css
@@ -299,4 +299,15 @@ p {
 
 /* ________________________________________________________ */
 
+/* BOOK YOUR NEXT TRIP START  */
+
+.step-icon {
+  width: 65px;
+  height: 65px;
+}
+
+/* BOOK YOUR NEXT TRIP ENDS  */
+
+/* ________________________________________________________ */
+
 /* START  */
