--- a/css/style.css
+++ b/css/style.css
@@ -311,6 +311,27 @@ p {
   font-size: 16px;
 }
 
+.bookCard1 {
+  padding: 25px;
+  max-width: 370px;
+  border-radius: 26px;
+  box-shadow: 104px -76px 99px -55px rgba(64, 166, 228, 0.75);
+}
+
+.bookCardImg {
+  border-radius: 26px;
+}
+
+.bookCardP {
+  color: var(--grey);
+}
+
+.bookCI {
+  background: #f5f5f5;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+}
 /* BOOK YOUR NEXT TRIP ENDS  */
 
 /* ________________________________________________________ */
