--- a/css/style.css
+++ b/css/style.css
@@ -332,6 +332,11 @@ p {
   color: var(--grey);
 }
 
+.bookCardP2 {
+  color: var(--grey);
+  font-size: 12px;
+}
+
 .bookCI {
   background: #f5f5f5;
   height: 40px;
@@ -340,7 +345,13 @@ p {
 }
 
 .bookCard2 {
-  max-width: 220px;
+  max-width: 223px;
+  background: var(--white);
+  box-shadow: 0px 0px 11px -7px rgba(0, 0, 0, 0.75);
+  border-radius: 18px;
+  position: relative;
+  left: 220px;
+  bottom: 165px;
 }
 
 .bookCard2 span {
@@ -354,6 +365,30 @@ p {
 .progress-bar {
   width: 40%;
   background: #8a79df;
+}
+
+@media only screen and (max-width: 768px) {
+  .bookCard2 {
+    max-width: 223px;
+    background: var(--white);
+    box-shadow: 0px 0px 11px -7px rgba(0, 0, 0, 0.75);
+    border-radius: 18px;
+    position: relative;
+    left: 180px;
+    bottom: 165px;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .bookCard2 {
+    max-width: 223px;
+    background: var(--white);
+    box-shadow: 0px 0px 11px -7px rgba(0, 0, 0, 0.75);
+    border-radius: 18px;
+    position: relative;
+    left: 100px;
+    bottom: 165px;
+  }
 }
 
 /* BOOK YOUR NEXT TRIP ENDS  */
