--- a/css/style.css
+++ b/css/style.css
@@ -377,7 +377,7 @@ p {
     box-shadow: 0px 0px 11px -7px rgba(0, 0, 0, 0.75);
     border-radius: 18px;
     position: relative;
-    left: 180px;
+    left: 150px;
     bottom: 165px;
   }
 }
@@ -405,6 +405,14 @@ p {
   font-family: poppins;
 }
 
+.china {
+  background-image: url(../images/china.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 538px;
+}
+
 .boy {
   width: 148px;
   position: relative;
@@ -421,7 +429,25 @@ p {
   font-size: 20px;
 }
 
+@media only screen and (max-width: 768px) {
+  .whatP {
+    font-size: 12px;
+  }
+
+  .boy {
+    width: 110px;
+    position: relative;
+    bottom: 300px;
+  }
+}
+
 /* WHAT PEOPLE SAY ENDS  */
+
+/* ________________________________________________________ */
+
+/* NEWS LETTER START  */
+
+/* NEWS LETTER ENDS  */
 
 /* ________________________________________________________ */
 
